# claude-agent-mesh

./: CLAUDE.md  DESIGN.md  README.md  claude_agent_mesh.py  mesh_runtime.py  mesh_wrapper.py  pyproject.toml  wire.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
Formula/: claude-agent-mesh.rb
claude_agent_mesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skills/agent-messaging/: SKILL.md
testdata/: README.md  spawn_argv.json  stdin_frames.jsonl  stdout_frames.jsonl
tests/: __init__.py  fake_engine.py  harness.py  test_distribution.py  test_fixture_redaction.py  test_mesh_cli.py  test_plugin.py  test_runtime.py  test_wire.py  test_wrapper_delivery.py  test_wrapper_gc.py  test_wrapper_presence.py  test_wrapper_proxy.py
